# connected-garage

./: .gitignore  README.md
connected-garage-controller/: AppSettings.toml  Cargo.toml  build.sh  deploy.sh
connected-garage-controller/src/: main.rs
connected-garage-service/: handler.ts  package-lock.json  package.json  serverless.yml
connected-garage-service/.build/: handler.js  handler.js.map  node_modules  package.json
connected-garage-ui/: package-lock.json
connected-garage-ui/ConnectedGarageMobile/: App.js  Header.js  app.json  config.js  package-lock.json  package.json
connected-garage-ui/ConnectedGarageMobile/android/: settings.gradle
connected-garage-ui/ConnectedGarageMobile/android/app/: _BUCK  build.gradle
connected-garage-ui/ConnectedGarageMobile/android/app/src/main/: AndroidManifest.xml
connected-garage-ui/ConnectedGarageMobile/ios/: Podfile
connected-garage-ui/ConnectedGarageMobile/ios/ConnectedGarageMobile/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
connected-garage-ui/ConnectedGarageMobile/ios/ConnectedGarageMobile.xcodeproj/: project.pbxproj
connected-garage-ui/ConnectedGarageMobile/ios/ConnectedGarageMobile.xcworkspace/: contents.xcworkspacedata
connected-garage-ui/ConnectedGarageMobile/ios/ConnectedGarageMobileTests/: ConnectedGarageMobileTests.m
connected-garage-web/: .eslintcache  package-lock.json  package.json
connected-garage-web/public/: index.html
connected-garage-web/src/: App.css  App.tsx  Openers.tsx  config.ts  index.tsx
(+7 files in other folders)
